# llm-security-testing-framework

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  FRAMEWORK_COVERAGE.md  MEMORY.md  Makefile  README.md  _risk_register_dump.json  conftest.py  pyproject.toml  requirements.txt  run_5_rag_tests.py
.benchmarks/: golden_eval.yaml
.claude/: settings.local.json
.claude/agents/: report-generator.md  security-researcher.md
attacks/: adaptive_seed_attacks.yaml  advanced_jailbreaks.yaml  agentic_attacks.yaml  agentic_sabotage_scenarios.yaml  anthropic_research_attacks.yaml  bias_fairness_attacks.yaml  cot_deception_probes.yaml  cross_tenant_rag_attacks.yaml  data_poisoning_attacks.yaml  ddos_resource_attacks.yaml  deepfake_disinfo_attacks.yaml  encoding_attacks.yaml  evaluation_awareness_probes.yaml  extended_attacks.yaml  identity_auth_attacks.yaml  mcp_attacks.yaml  model_extraction_attacks.yaml  multi_agent_attacks.yaml  multilingual_attacks.yaml  owasp_attacks.yaml  parameterized_manyshot_attacks.yaml  privacy_compliance_attacks.yaml  prompt_intel.yaml  rag_attacks.yaml  reward_hacking_scenarios.yaml  sandbox_escape_attacks.yaml  selfharm_disinfo_attacks.yaml  supply_chain_attacks.yaml  sycophancy_attacks.yaml  vector_space_attacks.yaml
config/: client_threat_model_template.yaml  config.yaml  config_client_rag_local_test.yaml  config_client_rag_template.yaml  config_client_template.yaml  config_gemini.yaml  config_huggingface.yaml  config_local.yaml  config_ollama.yaml  config_promptintel.yaml  config_promptintel_local.yaml  config_rag_security.yaml  config_rag_server.yaml  config_test_6.yaml  test_suites.yaml
docs/: API_KEYS.md  AUDIT_INDEX.md  BATCH_TESTING.md  DEVELOPER_GUIDE.md  Day4_Deliverable1_Expanded_RAG_Attack_Execution.md  Day4_Deliverable2_Risk_Linked_Report_v3.md  Day4_Deliverable3_Coverage_Dashboard.md  Day4_Deliverable4_Evaluator_Confidence_Check.md  GETTING_STARTED_BATCH.md  HUGGINGFACE_QUICK_REF.md  HUGGINGFACE_SETUP.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LOCAL_GGUF_SETUP.md  OLLAMA_QUICKSTART.md  PROJECT_READY.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  PROMPTINTEL_LOCAL_IMPLEMENTATION.md  PROMPTINTEL_LOCAL_SETUP.md  QUICK_REF.md  QUICK_REFERENCE.md  REPORTING_ENHANCEMENTS.md  SETUP.md  audit_part1_gap_analysis.md  audit_part2_rag_methodology.md  audit_part3_api_pipeline_security.md  audit_part4_quick_wins.md  audit_part5_evaluator_and_positioning.md
evidence/: README.md
examples/: QUICKSTART_GEMINI_README.md  quickstart.py  quickstart_gemini.py  quickstart_huggingface.py  quickstart_local.py  quickstart_ollama.py  quickstart_promptintel_local.py
knowledge_base/: API_keys.txt  Employees_details.txt
runs/: README.md
scripts/: eval_golden.py
src/: main.py
testpacks/: README.md
tests/: test_chat_templates.py  test_core.py  test_query_guard.py
(+103 files in other folders)
